feat(proj): 🚀 添加GitToolFileList组件

--- a/packages/frontend/src/components/CollapseWrap/index.module.css
+++ b/packages/frontend/src/components/CollapseWrap/index.module.css
@@ -33,3 +33,7 @@
   background-color: transparent;
   border: none;
 }
+
+.collapse-wrap :global(.ant-collapse .ant-collapse-content-box) {
+  padding: 0;
+}
