--- a/packages/frontend/src/components/business/ToolSpace/index.module.css
+++ b/packages/frontend/src/components/business/ToolSpace/index.module.css
@@ -49,10 +49,11 @@
 }
 
 .tool-panel {
+  flex: 1;
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 0;
   height: 100vh;
 }
 
